# pdf-signature-editor-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  package-lock.json  package.json
.github/workflows/: legacy-tkinter-build.yml  release.yml  signcanvas-desktop-builds.yml  windows-build.yml
apps/signcanvas-editor/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/signcanvas-editor/src/: App.tsx  index.css  main.tsx
apps/signcanvas-editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/signcanvas-editor/src-tauri/capabilities/: default.json
apps/signcanvas-editor/src-tauri/src/: main.rs
apps/signcanvas-editor/src/lib/: pdf.ts  signature.test.ts  signature.ts  utils.test.ts  utils.ts
apps/signcanvas-editor/src/platform/: index.ts  tauri.ts  types.ts  web.ts
apps/signcanvas-editor/src/state/: editor-store.test.ts  editor-store.ts
apps/signcanvas-editor/src/types/: editor.ts
docs/: BUILD_WINDOWS.md  TAURI_WEB_SETUP.md
legacy/tkinter-app/: README.md  SignCanvasPDF-OneFile.spec  app.py
legacy/tkinter-app/docs/: BUILD_WINDOWS.md
legacy/tkinter-app/scripts/: capture_screenshots.py
scripts/: publish_github.ps1
