[package]
name = "signcanvas_editor"
version = "0.1.0"
description = "SignCanvas editor desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "signcanvas_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2.4.1"
tauri-plugin-fs = "2.4.2"
